added header and banner

--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/fonts.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>davaleba-9</title>
 </head>
 <body>
-	
+	<header class="header">
+		<div class="container flex">
+			<a href="index.html">
+				<img src="img/Group 1.svg" alt="logo">
+			</a>
+			<div class="header-right flex">
+				<nav class="navbar">
+					<ul class="flex">
+						<li>
+							<a href="index.html">პროექტის შესახებ</a>
+						</li>
+						<li>
+							<a href="index.html">მოთხოვნები</a>
+						</li>
+						<li>
+							<a href="index.html">EXPLORE</a>
+						</li>
+						<li>
+							<a href="index.html">შესვლა</a>
+						</li>
+					</ul>
+				</nav>
+				<img class="search" src="img/search.svg" alt="search">
+			</div>
+		</div>
+	</header>
+
+	<div class="container">
+		<div class="banner"></div>
+	</div>
+
 </body>
 </html>
