added article section elements with styles

--- a/index.html
+++ b/index.html
@@ -40,5 +40,117 @@
 		<div class="banner"></div>
 	</div>
 
+	
+	<section class="articles-section">
+		<div class="container">
+			<h2 class="section-title">პოპულარული სტატიები</h2>
+			<div class="articles flex">
+				<div class="article-div">
+					<a href="#">
+						<img src="img/neonbrand-KVB3PzQ8sFo-unsplash.jpg">	
+					</a>
+					<div class="article-text">
+						<a href="#">
+							<h2>სტატიის სათაური</h2>
+						</a>
+						<p>
+							ამ სტატიასაც სჭირდება აღწერა, ამიტომ ეს ველი 
+							დაეთმობა ამ სტატიის მოკლე აღწერას 
+						</p>
+						<a href="#">more</a>
+					</div>
+				</div>
+				<div class="article-div">
+					<a href="#">
+						<img src="img/neonbrand-YaYcCW1nlqc-unsplash.jpg">
+					</a>
+					<div class="article-text">
+						<a href="#">
+							<h2>სტატიის სათაური</h2>
+						</a>
+						<p>
+							ამ სტატიასაც სჭირდება აღწერა, ამიტომ ეს ველი 
+							დაეთმობა ამ სტატიის მოკლე აღწერას 
+						</p>
+						<a href="#">more</a>
+					</div>
+				</div>
+				<div class="article-div">
+					<a href="#">
+						<img src="img/neonbrand-IXcI72btgv0-unsplash.jpg">
+					</a>
+					<div class="article-text">
+						<a href="#">
+							<h2>სტატიის სათაური</h2>
+						</a>
+						<p>
+							ამ სტატიასაც სჭირდება აღწერა, ამიტომ ეს ველი 
+							დაეთმობა ამ სტატიის მოკლე აღწერას 
+						</p>
+						<a href="#">more</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<a class="load-more" href="#">
+		<span>
+			Load more
+		</span>
+	</a>
+
+	<section class="articles-section">
+		<div class="container">
+			<h2 class="section-title">ბოლოს დამატებული</h2>
+			<div class="articles flex">
+				<div class="article-div">
+					<a href="#">
+						<img src="img/andrew-spencer-08-c5-GxA7M-unsplash.jpg">	
+					</a>
+					<div class="article-text">
+						<a href="#">
+							<h2>სტატიის სათაური</h2>
+						</a>
+						<p>
+							ამ სტატიასაც სჭირდება აღწერა, ამიტომ ეს ველი 
+							დაეთმობა ამ სტატიის მოკლე აღწერას 
+						</p>
+						<a href="#">more</a>
+					</div>
+				</div>
+				<div class="article-div">
+					<a href="#">
+						<img src="img/gonzalo-poblete-C1tnzdAmPE8-unsplash.jpg">
+					</a>
+					<div class="article-text">
+						<a href="#">
+							<h2>სტატიის სათაური</h2>
+						</a>
+						<p>
+							ამ სტატიასაც სჭირდება აღწერა, ამიტომ ეს ველი 
+							დაეთმობა ამ სტატიის მოკლე აღწერას 
+						</p>
+						<a href="#">more</a>
+					</div>
+				</div>
+				<div class="article-div">
+					<a href="#">
+						<img src="img/bruce-dixon-slaG7Oq3nIE-unsplash.jpg">
+					</a>
+					<div class="article-text">
+						<a href="#">
+							<h2>სტატიის სათაური</h2>
+						</a>
+						<p>
+							ამ სტატიასაც სჭირდება აღწერა, ამიტომ ეს ველი 
+							დაეთმობა ამ სტატიის მოკლე აღწერას 
+						</p>
+						<a href="#">more</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
