added footer elements and styles

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 	<title>davaleba-9</title>
 </head>
 <body>
+	<!-- header -->
 	<header class="header">
 		<div class="container flex">
 			<a href="index.html">
 				<img src="img/Group 1.svg" alt="logo">
 			</a>
 			<div class="header-right flex">
+				<!-- navigation -->
 				<nav class="navbar">
 					<ul class="flex">
 						<li>
@@ -36,11 +38,12 @@
 		</div>
 	</header>
 
+	<!-- banner div with background image -->
 	<div class="container">
 		<div class="banner"></div>
 	</div>
 
-	
+	<!-- popular articles section -->
 	<section class="articles-section">
 		<div class="container">
 			<h2 class="section-title">პოპულარული სტატიები</h2>
@@ -94,12 +97,14 @@
 		</div>
 	</section>
 	
+	<!-- load more -->
 	<a class="load-more" href="#">
 		<span>
 			Load more
 		</span>
 	</a>
 
+	<!-- last added articles section -->
 	<section class="articles-section">
 		<div class="container">
 			<h2 class="section-title">ბოლოს დამატებული</h2>
@@ -152,5 +157,38 @@
 			</div>
 		</div>
 	</section>
+
+	<!-- load more -->
+	<a class="load-more" href="#">
+		<span>
+			Load more
+		</span>
+	</a>
+
+	<!-- footer -->
+	<footer>
+		<div class="container flex">
+			<a href="index.html" class="footer-logo">
+				<img src="img/Group 3.svg" alt="logo">
+			</a>
+			<div class="footer-div">
+				<h2>კონტაქტი</h2>
+				<p>+995 0322 38 08 02</p>
+				<p>info@lucapolare.com</p>
+			</div>
+			<div class="footer-div">
+				<h2>მისამართი</h2>
+				<p>მერაბ ალექსიძის ქუჩა 10. თბილისი</p>
+			</div>
+			<div class="social-icons">
+				<a href="#">
+					<img src="img/facebook (2).svg" alt="facebook">
+				</a>
+				<a href="#">
+					<img src="img/instagram (1).svg" alt="instagram">
+				</a>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
